tests/e2e/chainsaw/26-gatewaygrpcapi-sync/resources/gateway.yaml
apiVersion: formance.com/v1beta1
kind: Gateway
metadata:
  name: chainsaw-grpcapi-gateway
spec:
  stack: chainsaw-grpcapi-sync
  dev: true
