tests/e2e/chainsaw/26-gatewaygrpcapi-sync/resources/httpapi-ledger.yaml
apiVersion: formance.com/v1beta1
kind: GatewayHTTPAPI
metadata:
  name: chainsaw-grpcapi-httpapi-ledger
spec:
  stack: chainsaw-grpcapi-sync
  name: ledger
  rules: []
