tests/e2e/chainsaw/26-gatewaygrpcapi-sync/resources/stack.yaml
apiVersion: formance.com/v1beta1
kind: Stack
metadata:
  name: chainsaw-grpcapi-sync
spec:
  version: v0.0.0-e2e
